feat: use srcset for images

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,7 +49,9 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-frontend-portfoli
         <div class="col-xs-12 col-sm-6 col-md-4">
           <article class="portfolio-project">
             <picture>
-              <img src="img/movie_screen-300w.png" alt="movie trailer website" class="img-responisve img-rounded">
+              <source srcset="img/movie_screen-350.png 350w"
+                      sizes="(min-width: 1440px) 350px, 300px">
+              <img src="img/movie_screen-300.png" alt="movie trailer website" class="img-responisve img-rounded">
             </picture>
             <h3 class="project-title">Movie Trailer Website</h3>
             <a href="https://github.com/brianquach/udacity-nano-fullstack-movie-trailer">https://github.com/brianquach/udacity-nano-fullstack-movie-trailer</a>
@@ -58,7 +60,9 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-frontend-portfoli
         <div class="col-xs-12 col-sm-6 col-md-4">
           <article class="portfolio-project">
             <picture>
-              <img src="img/catalog_screen-300w.png" alt="catalog web application">
+              <source srcset="img/catalog_screen-350.png 350w"
+                      sizes="(min-width: 1440px) 350px, 300px">
+              <img src="img/catalog_screen-300.png" alt="catalog web application">
             </picture>
             <h3 class="project-title">Catalog Web Application</h3>
             <a href="https://github.com/brianquach/udacity-nano-fullstack-catalog">https://github.com/brianquach/udacity-nano-fullstack-catalog</a>
@@ -67,7 +71,9 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-frontend-portfoli
         <div class="col-xs-12 col-sm-6 col-md-4">
           <article class="portfolio-project">
             <picture>
-              <img src="img/game_screen-300w.png" alt="five card poker game">
+              <source srcset="img/game_screen-350.png 350w"
+                      sizes="(min-width: 1440px) 350px, 300px">
+              <img src="img/game_screen-300.png" alt="five card poker game">
             </picture>
             <h3 class="project-title">Five-Card Poker API</h3>
             <a href="https://github.com/brianquach/udacity-nano-fullstack-game">https://github.com/brianquach/udacity-nano-fullstack-game</a>
