refact: use minified bootstrap

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-frontend-portfoli
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Brian Quach's Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Patua+One" rel="stylesheet">
-    <link href="css/vendor/bootstrap.css" rel="stylesheet">
+    <link href="css/vendor/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
   </head>
 
