--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,7 +57,14 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-frontend-portfoli
               <img src="img/movie_screen-300.png" alt="movie trailer website" class="img-responisve img-rounded">
             </picture>
             <h3 class="project-title">Movie Trailer Website</h3>
-            <a href="https://github.com/brianquach/udacity-nano-fullstack-movie-trailer">https://github.com/brianquach/udacity-nano-fullstack-movie-trailer</a>
+            <button type="button"
+                    class="btn btn-link"
+                    data-toggle="modal"
+                    data-target="#projectModal"
+                    data-project-name="Movie Trailer Website"
+                    data-thumbnail-img="img/movie_screen-300.png"
+                    data-description="First project for the Full-Stack Web Devloper Nanodegree course; Brian's favorite movie trailers project is a program that takes a list of Brian's favorite movies and returns a HTML page where users can view the movie information and click on a movie poster to view it's trailer."
+                    data-git-link="https://github.com/brianquach/udacity-nano-fullstack-movie-trailer">More Info</button>
           </article>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
@@ -68,7 +75,14 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-frontend-portfoli
               <img src="img/catalog_screen-300.png" alt="catalog web application">
             </picture>
             <h3 class="project-title">Catalog Web Application</h3>
-            <a href="https://github.com/brianquach/udacity-nano-fullstack-catalog">https://github.com/brianquach/udacity-nano-fullstack-catalog</a>
+            <button type="button"
+                    class="btn btn-link"
+                    data-toggle="modal"
+                    data-target="#projectModal"
+                    data-project-name="Catalog Web Application"
+                    data-thumbnail-img="img/catalog_screen-300.png"
+                    data-description="Third project for Full-Stack Web Devloper Nanodegree course; Book Catalog is a web application that catagorizes books into different genres."
+                    data-git-link="https://github.com/brianquach/udacity-nano-fullstack-catalog">More Info</button>
           </article>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
@@ -79,7 +93,14 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-frontend-portfoli
               <img src="img/game_screen-300.png" alt="five card poker game">
             </picture>
             <h3 class="project-title">Five-Card Poker API</h3>
-            <a href="https://github.com/brianquach/udacity-nano-fullstack-game">https://github.com/brianquach/udacity-nano-fullstack-game</a>
+            <button type="button"
+                    class="btn btn-link"
+                    data-toggle="modal"
+                    data-target="#projectModal"
+                    data-project-name="Five-Card Poker API"
+                    data-thumbnail-img="img/game_screen-300.png"
+                    data-description="Fourth project for Full-Stack Web Devloper Nanodegree course; Five-Card Poker is a web game that pits two players agaisnt each other in a game of a little luck and strategy. Each player is first delt five cards from a standard 52 card deck and is then able to exchange up to five cards for new cards to form their final hands. Both players' hands are then compared and the winner is the player with the best hand."
+                    data-git-link="https://github.com/brianquach/udacity-nano-fullstack-game">More Info</button>
           </article>
         </div>
       </div>
@@ -88,5 +109,34 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-frontend-portfoli
     <footer class="text-center">
       Copyright 2016 <a href="http://www.github.com/brianquach/">Brian Quach</a>
     </footer>
+
+    <div class="modal fade" id="projectModal" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+            <h4 class="modal-title" id="projectModalLabel"></h4>
+          </div>
+          <div class="modal-body">
+            <figure>
+              <img src="http://placehold.it/300x150" alt="modal thumbnail" class="img-responsive modal-thumbnail">
+              <figcaption class="text-center">
+                <small>
+                  <a href="http://www.github.com/brianquach" target="_blank" class="modal-git-link">Git Hub Repo</a>
+                </small>
+              </figcaption>
+            <hr>
+            <p class="modal-description"></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/modal.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
