refact: modify code to meet project reqs

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-front-portfolio/b
           </div>
           <div class="col-xs-12 col-sm-10">
             <h1 class="portfolio-name">Brian Quach</h1>
-            <p>Full Stack Web Developer</p>
+            <span>Full Stack Web Developer</span>
           </div>
         </div>
       </div>
