--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-front-portfolio/b
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Brian Quach's Portfolio</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Patua+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans%7CPatua+One" rel="stylesheet">
     <link href="css/vendor/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
   </head>
@@ -31,14 +31,12 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-front-portfolio/b
     <main class="container">
       <div class="row">
         <div class="col-xs-12">
-          <article>
-            <picture>
-              <source srcset="img/me-full.jpg" media="(min-width: 1400px)">
-              <source srcset="img/me-600-2x.jpg 2x, img/me-600-1x.jpg" media="(min-width: 600px)">
-              <source srcset="img/me-300-2x.jpg 2x, img/me-300-1x.jpg">
-              <img src="img/me-300-1x.jpg" alt="Brian Quach hiking Angel's Landing in Utah" class="img-responsive img-rounded portfolio-self-photo">
-            </picture>
-          </article>
+          <picture>
+            <source srcset="img/me-full.jpg" media="(min-width: 1400px)">
+            <source srcset="img/me-600-2x.jpg 2x, img/me-600-1x.jpg" media="(min-width: 600px)">
+            <source srcset="img/me-300-2x.jpg 2x, img/me-300-1x.jpg">
+            <img src="img/me-300-1x.jpg" alt="Brian Quach hiking Angel's Landing in Utah" class="img-responsive img-rounded portfolio-self-photo">
+          </picture>
         </div>
       </div>
 
@@ -115,7 +113,7 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-front-portfolio/b
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-            <h4 class="modal-title" id="projectModalLabel"></h4>
+            <h4 class="modal-title" id="projectModalLabel">Project Title</h4>
           </div>
           <div class="modal-body">
             <figure>
@@ -125,6 +123,7 @@ Licensed under MIT (https://github.com/brianquach/udacity-nano-front-portfolio/b
                   <a href="http://www.github.com/brianquach" target="_blank" class="modal-git-link">Git Hub Repo</a>
                 </small>
               </figcaption>
+            </figure>
             <hr>
             <p class="modal-description"></p>
           </div>
